сделал сетку ФУТЕРА

--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,14 @@ h1 {
 .right {
     float: right;
 }
-.clearfix {
+.clearfix::after {
     content: "";
     display: table;
     clear: both;
 }
 
 .container {
-    background-color: black;
+    background-color: lightgray;
     width: 940px;  
     padding: 0 130px;
     margin: 0 auto;
@@ -36,12 +36,7 @@ body {
     background-color: yellow;
 }
 
-ul {
-    background-color: green;
-}
-li {
-    background-color: red;
-}
+
 /*-----------top-header-------------------*/
 .top-header li:first-child {
     width: 220px;
@@ -70,8 +65,10 @@ li {
 .top-header .logo h1 {
     font-size: 24px;
     line-height: 24px;
+
+    text-transform: uppercase;
 }
-.top-header li:nth-child(n+3) > a,
+.top-header li:nth-child(n+3) > a,/*шрифт top-header*/
 .top-header .search {
     font-size: 17px;
     line-height: 18px;
@@ -106,6 +103,7 @@ li {
 
     color: #32425c;
 }
+
 /*--------------navigation----------------------------*/
 .header .navigation li {
     display: inline-block;
@@ -125,5 +123,74 @@ li {
 .header .navigation li:nth-child(n+2) {
     margin-left: 60px;
 }
+/*============END HESDER=====================*/
 
 
+/*=============FOOTER=========================*/
+/*---------------top-footer------------------*/
+.top-footer .contacts {
+    background-color: pink;
+    width: 380px;
+}
+.top-footer .nav-footer {
+    background-color: pink;
+    width: 550px;
+}
+
+
+.nav1-footer li {
+    display: inline-block;
+}
+.nav2-footer li {
+    display: inline-block;
+}
+.nav-footer ul {/*убираем лишние пробелы между элементами нафигации*/
+    font-size: 0;
+}
+
+.nav-footer a,
+address {/*восстанавливаем шрифт навигации фуиера*/
+    font-size: 18px;
+    line-height: 24px;
+}
+.top-footer .logo h1 {
+    font-size: 30px;
+    line-height: 30px;
+}
+/*позиционируем навигацию футера*/
+.nav-footer li {
+    margin-right: 55px;
+}
+.nav-footer li:last-child {
+    margin-right: 0;
+}
+.nav2-footer li:first-child {
+    margin-left: 25px;
+}
+.nav1-footer {
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+.nav2-footer {
+    margin-bottom: 60px;
+}
+/*--------------end top-footer----------------------------*/
+
+/*----------------bottom-footer---------------------------*/
+.bottom-footer small,
+.bottom-footer .feedback {
+    width: 300px;
+
+    font-size: 16px;
+    line-height: 18px;
+}
+.bottom-footer .social {
+    width: 180px;
+    
+    margin: 0 80px;
+  
+}
+.feedback p {
+    display: inline-block;
+}
+/*============END FOOTER============================*/
